[project]
name = "langchain-academy-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.4",
    "langchain-anthropic>=1.4.4",
    "langchain-ollama>=1.1.0",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.4",
    "wikipedia>=1.4.0",
]
